--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id "java"
-    id "jaci.openrio.gradle.GradleRIO" version "2018.03.06"
+    id "idea"
+    id "edu.wpi.first.GradleRIO" version "2019.1.1"
 }
 
 group 'com.team2073'
@@ -13,7 +14,7 @@ repositories {
     mavenCentral()
 }
 
-
+def COMMON_VERSION = '0.4.0-SNAPSHOT'
 def ROBOT_MAIN_CLASS = "com.team2073.robot.Robot"
 def TEAM_NUMBER = 2073
 def DEBUG_MODE = false
@@ -24,13 +25,12 @@ def ROBOT_CLASS = "com.team2073.robot.Robot"
 // This is added by GradleRIO's backing project EmbeddedTools.
 deploy {
     targets {
-        target("roborio", jaci.openrio.gradle.frc.RoboRIO) {
+        roboRIO("roborio") {
             team = TEAM_NUMBER
-            addresses << IP_ADDRESS
         }
     }
     artifacts {
-        artifact('frcJava', jaci.openrio.gradle.frc.FRCJavaArtifact) {
+        frcJavaArtifact('frcJava') {
             targets << "roborio"
 
             jvmArgs << '-Xmx10m'      // Set more JVM Arguments. Optional.
@@ -43,41 +43,53 @@ deploy {
             // Other values can be edited through EmbeddedTools.
             // See https://github.com/JacisNonsense/EmbeddedTools#spec
         }
+
+        fileTreeArtifact('frcStaticFileDeploy') {
+            // The directory below is the local directory to deploy
+            files = fileTree(dir: 'src/main/deploy')
+            // Deploy to RoboRIO target, into /home/lvuser/deploy
+            targets << "roborio"
+            directory = '/home/lvuser/deploy'
+
+        }
     }
-}
 
 
-// Defining my dependencies. In this case, WPILib (+ friends), and vendor libraries.
-// Also defines JUnit 4.
-dependencies {
-    compile group: 'com.team2073', name: 'common-util', version: '0.3.0-SNAPSHOT'
-    compile group: 'com.team2073', name: 'common-wpi-util', version: '0.3.0-SNAPSHOT'
-    compile group: 'com.team2073', name: 'common-guice', version: '0.3.0-SNAPSHOT'
-    compile group: 'com.google.inject', name: 'guice', version: '4.1.0'
-    compile group: 'com.google.inject.extensions', name: 'guice-assistedinject', version: '4.1.0'
-    compile group: 'com.google.inject.extensions', name: 'guice-throwingproviders', version: '4.1.0'
-    compile group: 'com.mycila.guice.extensions', name: 'mycila-guice-jsr250', version: '4.0.rc1'
-    compile group: 'org.mockito', name: 'mockito-core', version: '2.15.0'
-    compile group: 'com.google.inject', name: 'guice', version: '3.0'
+    dependencies {
+        compile group: 'com.team2073', name: 'common-util', version: COMMON_VERSION
+        compile group: 'com.team2073', name: 'common-wpi-util', version: COMMON_VERSION
+        compile group: 'com.team2073', name: 'common-guice', version: COMMON_VERSION
+        compile group: 'com.google.inject', name: 'guice', version: '4.1.0'
+        compile group: 'com.google.inject.extensions', name: 'guice-assistedinject', version: '4.1.0'
+        compile group: 'com.google.inject.extensions', name: 'guice-throwingproviders', version: '4.1.0'
+        compile group: 'com.mycila.guice.extensions', name: 'mycila-guice-jsr250', version: '4.0.rc1'
+        compile group: 'org.mockito', name: 'mockito-core', version: '2.15.0'
+        compile group: 'com.google.inject', name: 'guice', version: '3.0'
 
-    testCompile 'junit:junit:4.12'
-    testCompile("org.junit.jupiter:junit-jupiter-api:5.2.0")
-    testRuntime("org.junit.jupiter:junit-jupiter-engine:5.2.0")
-    testCompile group: 'com.team2073', name: 'common-wpi-simulation', version: '0.3.0-SNAPSHOT'
-//    testCompile group: 'com.team2073', name: 'common-wpi-simulation-stubs', version: '0.3.0-SNAPSHOT'
+        testCompile 'junit:junit:4.12'
+        testCompile("org.junit.jupiter:junit-jupiter-api:5.2.0")
+        testRuntime("org.junit.jupiter:junit-jupiter-engine:5.2.0")
+        testCompile group: 'com.team2073', name: 'common-wpi-simulation', version: COMMON_VERSION
+        testCompile group: 'com.team2073', name: 'common-wpi-simulation-stubs', version: COMMON_VERSION
 
-    compile wpilib()
-    compile ctre()
-}
+
+        compile wpi.deps.wpilib()
+        compile wpi.deps.vendor.java()
+
+        nativeZip wpi.deps.vendor.jni(wpi.platforms.roborio)
+        nativeDesktopZip wpi.deps.vendor.jni(wpi.platforms.desktop)
+    }
 
 // Setting up my Jar File. In this case, adding all libraries into the main jar ('fat jar')
 // in order to make them all available at runtime. Also adding the manifest so WPILib
 // knows where to look for our Robot Class.
-jar {
-    from configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
-    manifest jaci.openrio.gradle.GradleRIOPlugin.javaManifest(ROBOT_CLASS)
-}
+    jar {
+        from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+        manifest edu.wpi.first.gradlerio.GradleRIOPlugin.javaManifest(ROBOT_MAIN_CLASS)
+    }
 
-task wrapper(type: Wrapper) {
-    gradleVersion = '4.9'
+    wrapper {
+        gradleVersion = '5.0'
+    }
+
 }
