--- a/build.gradle
+++ b/build.gradle
@@ -16,48 +16,42 @@ repositories {
 
 def COMMON_VERSION = '0.4.0-SNAPSHOT'
 def ROBOT_MAIN_CLASS = "com.team2073.robot.Main"
-def TEAM_NUMBER = 2073
-def DEBUG_MODE = false
-def IP_ADDRESS = "10.20.73.2"
-def ROBOT_CLASS = "com.team2073.robot.Robot"
+
+// Pass arguments via command line to active different modes
+// Ex: ./gradlew deploy -Psim
+// Sets simulation mode using the simulation robot class defined below
+// Ex: ./gradlew deploy -PtestBoard
+// Sets simulation mode using the test board robot class defined below
 
 // Property keys
-def PROP_KEY_SIM_MODE = "sim"
-def PROP_KEY_TEST_BOARD_MODE = "testBoard"
 def PROP_KEY_REMOTE_DEBUG_MODE = "remoteDebug"
 def PROP_KEY_TEAM_NUMBER = "teamNumber"
 
-def DEFAULT_ROBOT_CLASS = "org.usfirst.frc.team2073.robot.RobotDelegate"
-def SIMULATION_ROBOT_CLASS = "com.team2073.common.dev.simulation.RobotDelegatorSimulationImpl"
-def TEST_BOARD_ROBOT_CLASS = "com.team2073.common.dev.testboard.DevRobot"
+// Configurale properties
+def TEAM_NUMBER = 2073
+def DEBUG_MODE = false
+def IP_ADDRESS
+
+println "Team 2073 custom arguments available:"
+println "\t-P" + PROP_KEY_REMOTE_DEBUG_MODE
+println "\t-P" + PROP_KEY_TEAM_NUMBER + "=####"
 
 ext {
-    // Allow overriding this property from the command line/run config using -PROBOT_CLASS=com.something.SomeRobotClass
-    if (project.hasProperty(PROP_KEY_SIM_MODE)) {
-        ROBOT_CLASS = SIMULATION_ROBOT_CLASS
-        println "============================================================================"
-        println "Simulation mode enabled. Overriding default ROBOT_CLASS of [" + DEFAULT_ROBOT_CLASS + "] with [" + ROBOT_CLASS + "]."
-        println "============================================================================"
-    } else if(project.hasProperty(PROP_KEY_TEST_BOARD_MODE)) {
-        ROBOT_CLASS = TEST_BOARD_ROBOT_CLASS
-        println "============================================================================"
-        println "Test board mode enabled. Overriding default ROBOT_CLASS of [" + DEFAULT_ROBOT_CLASS + "] with [" + ROBOT_CLASS + "]."
-        println "============================================================================"
-    }
 
     if (project.hasProperty(PROP_KEY_REMOTE_DEBUG_MODE)) {
+        println "Remote debug mode enabled"
         DEBUG_MODE = true
     }
 
     if (project.hasProperty(PROP_KEY_TEAM_NUMBER)) {
         println "============================================================================"
-        println "Overriding default team # of [" + TEAM + "] with [" + teamNumber + "]."
+        println "Overriding default team # of [" + TEAM_NUMBER + "] with [" + teamNumber + "]."
         println "============================================================================"
-        TEAM = TEAM_NUMBER
+        TEAM_NUMBER = teamNumber.toInteger()
     }
-    // println Integer.toString(teamNumber).substring(0, 2) + "." + teamNumber.substring(2, 4)
+    
     IP_ADDRESS = "10." + TEAM_NUMBER.toString().substring(0, 2) + "." + TEAM_NUMBER.toString().substring(2, 4) + ".2"
-    println IP_ADDRESS
+    println "Setting IP address to: " + IP_ADDRESS
 }
 
 // Define my targets (RoboRIO) and artifacts (deployable files)
