Jason/IntakeTuning: Orientation and faster after chain slop improvement.

--- a/props/practice/Application.properties
+++ b/props/practice/Application.properties
@@ -10,7 +10,7 @@ directionality.elevatorMaster = true
 directionality.elevatorSlave1 = true
 directionality.elevatorSlave2 = true
 directionality.intakePivotMaster = false
-directionality.intakePivotSlave = true
+directionality.intakePivotSlave = false
 directionality.intakeRoller = false
 directionality.intakeRoller2 = false
 
