--- a/props/main/Application.properties
+++ b/props/main/Application.properties
@@ -36,10 +36,10 @@ ports.driveShiftLowPort = 0
 ports.driveShiftHighPort = 1
 ports.elevatorShiftLowPort = 2
 ports.elevatorShiftHighPort = 3
-ports.hatchUpSolenoidPort = 5
-ports.hatchDownSolenoidPort = 4
-ports.hatchHoldSolenoidPort = 6
-ports.hatchReleaseSolenoidPort = 7
+ports.shooterClampSolenoidPort = 5
+ports.shooterOpenSolenoidPort = 4
+ports.carriageOutSolenoidPort = 6
+ports.carriageInSolenoidPort = 7
 ports.pcm1CanId = 1
 ports.forkReleaseSolenoidPort = 0
 ports.forkHoldSolenoidPort = 1
