--- a/props/practice/Application.properties
+++ b/props/practice/Application.properties
@@ -36,16 +36,16 @@ ports.driveShiftLowPort = 0
 ports.driveShiftHighPort = 1
 ports.elevatorShiftLowPort = 2
 ports.elevatorShiftHighPort = 3
-ports.hatchUpSolenoidPort = 5
-ports.hatchDownSolenoidPort = 4
-ports.hatchHoldSolenoidPort = 6
-ports.hatchReleaseSolenoidPort = 7
+ports.shooterClampSolenoidPort = 5
+ports.shooterOpenSolenoidPort = 4
+ports.carriageOutSolenoidPort = 6
+ports.carriageInSolenoidPort = 7
 ports.pcm1CanId = 1
 ports.forkReleaseSolenoidPort = 0
 ports.forkHoldSolenoidPort = 1
 ports.robotIntakeGrabSolenoidPort = 2
 ports.robotIntakeOpenSolenoidPort = 3
-ports.cargoBannerDioPort = 0
+ports.cargoBannerDioPort = 6
 ports.hatchUltrasonicTriggerDioPort = 2
 ports.hatchUltrasonicEchoDioPort = 1
 ports.elevatorBottomLimitDioPort = 5
