START OF WORLDS BAbEEE, lets finna get litty

--- a/props/main/Application.properties
+++ b/props/main/Application.properties
@@ -41,10 +41,8 @@ ports.shooterOpenSolenoidPort = 4
 ports.carriageOutSolenoidPort = 6
 ports.carriageInSolenoidPort = 7
 ports.pcm1CanId = 1
-ports.forkReleaseSolenoidPort = 0
-ports.forkHoldSolenoidPort = 1
-ports.robotIntakeGrabSolenoidPort = 2
-ports.robotIntakeOpenSolenoidPort = 3
+ports.deployStiltSolenoid = 0
+ports.closeStiltSolenoid = 1
 ports.cargoBannerDioPort = 0
 ports.hatchUltrasonicTriggerDioPort = 2
 ports.hatchUltrasonicEchoDioPort = 1
